overflow fix

--- a/src/components/forum.css
+++ b/src/components/forum.css
@@ -57,7 +57,7 @@
 
 
 .nav-item a:hover{
- 
+ display:flex;
 }
 
 .hide{
