--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,15 +1,15 @@
-.login-header {
+/* .login-header {
     background-color: navy;
     position: relative;
     padding-top: 150px;
     padding-bottom: 135px;
-    }
+    } */
 
-.login-link {
+/* .login-link {
     text-align: center;
     position: relative;
     padding-right: 50px;
-}
+} */
 
 
 
@@ -30,3 +30,6 @@ h6 {
 }
 
 
+.reg-form {
+    overflow-x: hidden;
+}
